stateDiagram-v2
  [*] --> CREATED
  CREATED --> QUEUED
  QUEUED --> ACCEPTED
  ACCEPTED --> VIDEO_CONNECTED
  ACCEPTED --> DISPATCHED
  VIDEO_CONNECTED --> DISPATCHED
  DISPATCHED --> EN_ROUTE
  EN_ROUTE --> ON_SCENE
  ON_SCENE --> HANDOVER_PENDING
  HANDOVER_PENDING --> HANDED_OVER
  HANDED_OVER --> CLOSED
  CREATED --> CANCELLED
  QUEUED --> FALSE_ALARM
  ACCEPTED --> FALSE_ALARM
  CANCELLED --> [*]
  FALSE_ALARM --> [*]
  CLOSED --> [*]
